完善功能  实现点击和下滑退出查看

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ShowPictureActivity"/>
+        <activity android:name=".ShowPictureActivity"
+            android:theme="@style/MyTheme"/>
     </application>
 
 </manifest>
